[workspace]
members = ["indigopay-contract", "escrow-contract", "oracle-contract", "attestation-contract", "indigopay-contract/tests/v2_fixture"]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
