[package]
name = "indigopay-contract"
version = "0.1.0"
edition = "2021"
description = "Stellar IndigoPay — Soroban smart contract for transparent climate donations"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "27.0.0"

[dev-dependencies]
soroban-sdk = { version = "27.0.0", features = ["testutils"] }
proptest = "1.4"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
